--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "country-flag-icons": "^1.5.21",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "8.5.1",
+    "framer-motion": "^12.23.25",
     "geist": "^1.3.1",
     "input-otp": "1.4.1",
     "js-cookie": "^3.0.5",
