--- a/.env.local.example
+++ b/.env.local.example
@@ -45,3 +45,10 @@ GOOGLE_MAPS_API_KEY_SERVER=your_server_api_key_here
 # Example values (DO NOT use in production - create your own keys):
 # NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=AIzaSyC_example_client_key_xxx
 # GOOGLE_MAPS_API_KEY_SERVER=AIzaSyB_example_server_key_xxx
+
+# ============================================
+# Site-Wide Password Protection (Basic Auth)
+# ============================================
+SITE_PASSWORD_ENABLED=false
+SITE_PASSWORD_USERNAME=lato
+SITE_PASSWORD_PASSWORD=your_secure_password_here
