docs: add Supabase environment variables

--- a/.env.local.example
+++ b/.env.local.example
@@ -47,6 +47,19 @@ GOOGLE_MAPS_API_KEY_SERVER=your_server_api_key_here
 # GOOGLE_MAPS_API_KEY_SERVER=AIzaSyB_example_server_key_xxx
 
 # ============================================
+# Supabase Configuration (Authentication)
+# ============================================
+# Get these from your Supabase project dashboard: https://supabase.com/dashboard
+# Go to Project Settings > API
+
+NEXT_PUBLIC_SUPABASE_URL=https://your-project-id.supabase.co
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key-here
+
+# Example values (DO NOT use in production - create your own project):
+# NEXT_PUBLIC_SUPABASE_URL=https://abcdefghijklmnop.supabase.co
+# NEXT_PUBLIC_SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
+
+# ============================================
 # Site-Wide Password Protection (Basic Auth)
 # ============================================
 SITE_PASSWORD_ENABLED=false
